syntax = "proto3";
package io.github.hsedjame.ktor.grpc.server;
option java_multiple_files = true;


message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service Greeter {

  rpc SayHello(HelloRequest) returns (HelloResponse);
}